style.css
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body{
    font-family: "Poppins", sans-serif;
    background-color: hsl(218, 23%, 16%);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    text-align: center;
    padding: 0 10px;
    position: relative;
    color:#D4E1EB;
}

.advice-container{
    background-color: hsl(217, 19%, 24%);
    border-radius: 8px;
    max-width: 515px;
    width: 100%;
    padding: 24px 16px;
    display: flex;
    align-items: center;
    flex-direction: column;
    position: relative;
}

.advice-label{
    color: hsl(150, 100%, 66%);
    font-size:12px;
    padding-bottom: 16px;
    display: none;
    font-weight: 600;
}

.advice-label span{
    padding-left: 4px;
}

.advice{
    color: #D4E1EB;
    font-weight: 600;
    font-size: 26px;
}

.pattern-divider img{
    padding: 16px 0;
    display: none;
    margin-bottom: 8px;
}

.dice-container{
    background-color:hsl(150, 100%, 66%);
    width: 50px;
    height: 50px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute; 
    bottom: -24px;   
}

.dice-container:hover{
    box-shadow: 0 0 20px hsl(150, 100%, 66%);;
    cursor: pointer;
}

.initial-dice-roll{
    display: none;
    color: #D4E1EB;
    font-weight: 400;
    font-size: 20px;
    padding: 10px
}

footer{
    position: absolute;
    bottom: 6px;
}

footer a{
    color: hsl(228, 45%, 44%);
    text-decoration: none;
}

@media (max-width:560px) {
    .advice-container{
        max-width: 444px;
        padding-top: 4px;
    }

    .advice-label{
        width: 100%;
        padding-top: 10px;
    }

    .advice{
        font-size: 20px;
        /* padding: 0 21px 16px; */
        padding-bottom: 16px;
    }

    .pattern-divider img{
        width: 95%;
        margin: 0 auto 6px;
        padding: 12px 0;
    }
    
    footer{
        font-size: 12px;
    }

    .initial-dice-roll{
        font-size: 16px;
    }
}

@media (max-width:444px) {

    body{
        min-height: 92vh;
    }

    .advice-container{
        padding: 4px 16px 16px; 
    }

    .advice{
        padding-bottom: 10px;
    }

    .advice-label{
        width: 100%;
        padding-top: 10px;
    }

    .pattern-divider img{
        margin-bottom: 12px;
    }

    .dice-container{
        height: 45px;
        width: 45px;
    }

    .initial-dice-roll{
        padding-bottom: 10px;
    }

    footer{
        bottom:4px;
    }
}

